test_programs/compile_failure/noirc_frontend_tests_bound_checks_overflowing_u8/src/main.nr

        fn main() {
            let _: u8 = 256;
        }
        